fix: Align checkbox.

--- a/stylesheets/style/codacy/components/_input-groups.scss
+++ b/stylesheets/style/codacy/components/_input-groups.scss
@@ -40,7 +40,7 @@
 
       &::before {
         margin-left: -10px;
-        margin-top: -7px;
+        margin-top: -6px;
         border-radius: 3px 0 0 3px;
       }
 
